# pyReel

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  convert.py  db.py  models.py  pyproject.toml  scan.py
.github/workflows/: pre-commit-check.yml  run-pytest.yml
api/: app.py  pyproject.toml
api/models/: file.py  setting.py
api/routes/: files.py  settings.py
api/tests/: conftest.py
api/tests/models/: setting_test.py
api/tests/utils/: convert_test.py  scan_test.py
api/utils/: convert.py  db.py  models.py  scan.py
tests/: conftest.py
tests/utils/: convert_test.py
ui/: index.html  index.js  package-lock.json
ui/src/: App.js
ui/src/components/: FileProcessor.js
utils/: convert.py  logger.py  models.py  scan.py
